discussion/kv_engine/179512/179512_rev4_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-53304: Enforce holding of stateLock in VBucket::queueItem [4/n]

MB-53304 suggests we ensure that the stateLock is held by passing a ref
to it in queueItem (and the call hierarchy of queueItem).

This change ensures we hold a lock on the VBucket state while updating
scopes and collections.

In a future change I will pass this ref down to queueItem.

Change-Id: Ifb0487a72fe17e3c488a63e6c9c348e91ebb87fa

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Vesko Karaganev
Date: 2022-09-21 13:08:34.000000000
Message: 
Uploaded patch set 4.
----------------------------------------------------------------------------------------------------------------------
Author: Dave Rigby
Date: 2022-09-21 13:17:40.000000000
Message: 
Patch Set 4:

(1 comment)
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-09-21 13:41:21.000000000
Message: 
Patch Set 4: Verified-1 Code-Review-1

Build Failed 

https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/20536/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kv_bucket.cc:1078:41: error: no viable conversion from "std::unique_lock<std::mutex>" to "VBucketStateLockRef" (aka "SharedLockRef<internal::VBucketStateLockTag>") [clang-diagnostic-error]
        collectionsManager->maybeUpdate(vbset, *newvb);
                                        ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/utilities/lock_utilities.h:36:5: note: candidate constructor not viable: no known conversion from "std::unique_lock<std::mutex>" to "const folly::SharedMutex::ReadHolder &" for 1st argument
    SharedLockRef(const folly::SharedMutex::ReadHolder& rhl) : ptr(&rhl) {
    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/utilities/lock_utilities.h:39:5: note: candidate constructor not viable: no known conversion from "std::unique_lock<std::mutex>" to "const folly::SharedMutex::WriteHolder &" for 1st argument
    SharedLockRef(const folly::SharedMutex::WriteHolder& whl) : ptr(&whl) {
    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/utilities/lock_utilities.h:43:5: note: candidate constructor not viable: no known conversion from "std::unique_lock<std::mutex>" to "const cb::SharedLockRef<internal::VBucketStateLockTag> &" for 1st argument
    SharedLockRef(const SharedLockRef&) = default;
    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/utilities/lock_utilities.h:46:5: note: candidate constructor not viable: no known conversion from "std::unique_lock<std::mutex>" to "cb::SharedLockRef<internal::VBucketStateLockTag> &&" for 1st argument
    SharedLockRef(SharedLockRef&&) = default;
    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/collections/manager.h:201:42: note: passing argument to parameter "vbStateLock" here
    void maybeUpdate(VBucketStateLockRef vbStateLock, VBucket& vb) const;
                                         ^

</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/20536/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kv_bucket.cc:1078:41:
error: no viable conversion from "std::unique_lock<std::mutex>" to "VBucketStateLockRef" (aka "SharedLockRef<internal::VBucketStateLockTag>") [clang-diagnostic-error]
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/20536/ )

https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/49545/ : FAILURE

Compile error at C:/Jenkins/workspace/kv_engine-windows-master/kv_engine/engines/ep/src/kv_bucket.cc(1078): error C2664: "void Collections::Manager::maybeUpdate(VBucketStateLockRef,VBucket &) const": cannot convert argument 1 from "std::unique_lock<std::mutex>" to "VBucketStateLockRef" ( https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/49545/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/41642/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/kv_bucket.cc:1078:41:
error: no viable conversion from "std::unique_lock<std::mutex>" to "VBucketStateLockRef" (aka "SharedLockRef<internal::VBucketStateLockTag>")
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/41642/ )

https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/10244/ : FAILURE

Compile error at [2022-09-21T13:36:29.360Z] /home/couchbase/jenkins/workspace/kv_engine.libFuzzer_master/kv_engine/engines/ep/src/kv_bucket.cc:1078:41:
error: no viable conversion from "std::unique_lock<std::mutex>" to "VBucketStateLockRef" (aka "SharedLockRef<internal::VBucketStateLockTag>")
 ( https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/10244/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/22512/ : FAILURE

Compile error at [2022-09-21T13:39:46.481Z] /home/couchbase/jenkins/workspace/kv_engine.linux-CE_master/kv_engine/engines/ep/src/kv_bucket.cc:1078:41:
error: cannot convert ?std::unique_lock<std::mutex>? to ?VBucketStateLockRef? {aka ?cb::SharedLockRef<internal::VBucketStateLockTag>?}
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/22512/ )

https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/23675/ : FAILURE

Compile error at [2022-09-21T13:39:24.823Z] /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_master/kv_engine/engines/ep/src/kv_bucket.cc:1078:41:
error: no viable conversion from "std::unique_lock<std::mutex>" to "VBucketStateLockRef" (aka "SharedLockRef<internal::VBucketStateLockTag>")
 ( https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/23675/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/22883/ : FAILURE

Compile error at [2022-09-21T13:40:19.309Z] /home/couchbase/jenkins/workspace/kv_engine.linux_master/kv_engine/engines/ep/src/kv_bucket.cc:1078:41:
error: cannot convert ?std::unique_lock<std::mutex>? to ?VBucketStateLockRef? {aka ?cb::SharedLockRef<internal::VBucketStateLockTag>?}
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/22883/ )

https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/21899/ : FAILURE

Compile error at [2022-09-21T13:37:32.324Z] /Users/couchbase/workspace/workspace/kv_engine.macos_master_2/kv_engine/engines/ep/src/kv_bucket.cc:1078:41:
error: no viable conversion from "std::unique_lock<std::mutex>" to "VBucketStateLockRef" (aka "SharedLockRef<internal::VBucketStateLockTag>")
 ( https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/21899/ )

https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/30912/ : FAILURE

Compile error at [2022-09-21T13:40:25.306Z] /home/couchbase/jenkins/workspace/kv_engine.ASan-UBSan_master/kv_engine/engines/ep/src/kv_bucket.cc:1078:41:
error: no viable conversion from "std::unique_lock<std::mutex>" to "VBucketStateLockRef" (aka "SharedLockRef<internal::VBucketStateLockTag>")
 ( https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/30912/ )

https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/10343/ : FAILURE

Compile error at [2022-09-21T13:19:18.257Z] /home/couchbase/jenkins/workspace/kv_engine.aarch64-linux_master/kv_engine/engines/ep/src/kv_bucket.cc:1078:41:
error: cannot convert ?std::unique_lock<std::mutex>? to ?VBucketStateLockRef? {aka ?cb::SharedLockRef<internal::VBucketStateLockTag>?}
 ( https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/10343/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/19761/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Vesko Karaganev
Date: 2022-09-21 13:55:21.000000000
Message: 
Patch Set 4:

(1 comment)
----------------------------------------------------------------------------------------------------------------------
Author: Dave Rigby
Date: 2022-09-21 14:09:30.000000000
Message: 
Patch Set 4: Code-Review-1

(1 comment)
----------------------------------------------------------------------------------------------------------------------
